# SRonGIG

./: .gitignore  CMakeLists.txt  README.md
experiments/: CMakeLists.txt  read_partition_data_format.cpp  reader_loss.cpp  reader_simple_partition.cpp
experiments/data_collect/: DataCollectionToLatex.ipynb
include/: CMakeLists.txt
include/mockturtle/utils/: network_utils.hpp
include/mockturtle/views/: partition_view.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt
test/partition/: dump_hmetis.cpp
